--- a/Notebook/Olimpines_notebook.ipynb
+++ b/Notebook/Olimpines_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,21 +14,268 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sportininkai = pd.read_csv(\"athlete_events.csv\")\n",
+    "salys = pd.read_csv(\"noc_regions.csv\")\n",
+    "                  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bendras = pd.merge(sportininkai, salys, on=\"NOC\", how=\"left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bendras.set_index(\"ID\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (2281114039.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    data = pd.read_csv(\"C:\\Users\\kilci\\OneDrive\\Python projektai\\Olympic_dataset_exploration\\DataSet\\\\athlete_events.csv\")\u001b[0m\n\u001b[1;37m                                                                                                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>261642.000000</td>\n",
+       "      <td>210945.000000</td>\n",
+       "      <td>208241.000000</td>\n",
+       "      <td>271116.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>25.556898</td>\n",
+       "      <td>175.338970</td>\n",
+       "      <td>70.702393</td>\n",
+       "      <td>1978.378480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6.393561</td>\n",
+       "      <td>10.518462</td>\n",
+       "      <td>14.348020</td>\n",
+       "      <td>29.877632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>127.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>1896.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>168.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>1960.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>175.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>1988.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>183.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>2002.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>226.000000</td>\n",
+       "      <td>214.000000</td>\n",
+       "      <td>2016.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Age         Height         Weight           Year\n",
+       "count  261642.000000  210945.000000  208241.000000  271116.000000\n",
+       "mean       25.556898     175.338970      70.702393    1978.378480\n",
+       "std         6.393561      10.518462      14.348020      29.877632\n",
+       "min        10.000000     127.000000      25.000000    1896.000000\n",
+       "25%        21.000000     168.000000      60.000000    1960.000000\n",
+       "50%        24.000000     175.000000      70.000000    1988.000000\n",
+       "75%        28.000000     183.000000      79.000000    2002.000000\n",
+       "max        97.000000     226.000000     214.000000    2016.000000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"C:\\Users\\kilci\\OneDrive\\Python projektai\\Olympic_dataset_exploration\\DataSet\\\\athlete_events.csv\")\n",
-    "                  "
+    "bendras.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auksoMedaliai = bendras[(bendras.Medal == 'Gold')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>13224.000000</td>\n",
+       "      <td>10539.000000</td>\n",
+       "      <td>10254.000000</td>\n",
+       "      <td>13372.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>25.901013</td>\n",
+       "      <td>177.898472</td>\n",
+       "      <td>74.183879</td>\n",
+       "      <td>1973.131618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.892887</td>\n",
+       "      <td>11.052521</td>\n",
+       "      <td>15.207425</td>\n",
+       "      <td>34.179153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>136.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>1896.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>170.000000</td>\n",
+       "      <td>63.000000</td>\n",
+       "      <td>1952.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>178.000000</td>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>1984.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>185.000000</td>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>2002.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>223.000000</td>\n",
+       "      <td>170.000000</td>\n",
+       "      <td>2016.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Age        Height        Weight          Year\n",
+       "count  13224.000000  10539.000000  10254.000000  13372.000000\n",
+       "mean      25.901013    177.898472     74.183879   1973.131618\n",
+       "std        5.892887     11.052521     15.207425     34.179153\n",
+       "min       13.000000    136.000000     28.000000   1896.000000\n",
+       "25%       22.000000    170.000000     63.000000   1952.000000\n",
+       "50%       25.000000    178.000000     73.000000   1984.000000\n",
+       "75%       29.000000    185.000000     84.000000   2002.000000\n",
+       "max       64.000000    223.000000    170.000000   2016.000000"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auksoMedaliai.describe()"
    ]
   },
   {
